color variables added

--- a/index.html
+++ b/index.html
@@ -11,6 +11,14 @@
 
 </head>
 <body>
+    <header>
+        <nav>
+            <div class="header-container">
+                <div class="logo"></div>
+                <div class="navigation"></div>
+            </div>
+        </nav>
+    </header>
     
 </body>
 </html>
