header and nav almost finished

--- a/index.html
+++ b/index.html
@@ -30,19 +30,19 @@
         </div>      
     </header>
     <main>
-        <section>
+        <section class="section-1">
             <div class="heading-banner">
-                <div class="image">
+                <div class="main-image">
                     <img src="images/milky-way.jpg" alt="picture of milky way">
-                </div>
-                <div>
-                    <p>THE SYSTEM MAGAZINE</p>
-                    <h1>Welcome to the <p>Solar System</p></h1>
-                    <p>Take atour around the coolest steller system around</p>
+                    <div class="header-text">
+                        <p>THE SYSTEM MAGAZINE</p>
+                        <h1>Welcome to the <span class="gradient-text">Solar System</span></h1>
+                        <p>Take atour around the coolest steller system around</p>
+                    </div>
                 </div>
             </div>
         </section>
-        <section>
+        <section class="section-2">
             <h2>Meet the Locals</h2>
             <div class="locals-container">
                 <div class="sun-card">
