card section finished for desptop

--- a/index.html
+++ b/index.html
@@ -18,62 +18,63 @@
     <header>
         <div class="header-container">
             <div class="logo">
-                <a href="#">THE SYSTEM</a>
+                <a href="#">THE <div>SYSTEM</div></a>
             </div>
-            <div class="navigation">
-                <nav>
+            <nav class="navigation">
+                <ul>
                     <li><a href="#">Planets</a></li>
                     <li><a href="#">Interseller</a></li>
                     <li><a href="#">Contact</a></li>
-                </nav>
-            </div>
+                </ul>
+                <!-- <button>Contact</button> -->
+            </nav>
         </div>      
     </header>
     <main>
         <section class="section-1">
             <div class="heading-banner">
-                <div class="main-image">
+                <div class="image-container">
                     <img src="images/milky-way.jpg" alt="picture of milky way">
-                    <div class="header-text">
-                        <p>THE SYSTEM MAGAZINE</p>
-                        <h1>Welcome to the <span class="gradient-text">Solar System</span></h1>
-                        <p>Take atour around the coolest steller system around</p>
-                    </div>
+                </div>
+                <div class="header-text">
+                    <p>THE SYSTEM MAGAZINE</p>
+                    <h1>Welcome to the <span class="gradient-text">Solar System</span></h1>
+                    <p>Take atour around the coolest steller system around</p>
                 </div>
             </div>
         </section>
         <section class="section-2">
             <h2>Meet the Locals</h2>
             <div class="locals-container">
-                <div class="sun-card">
+                <div class="sun-card card">
                     <img src="images/sun.jpg" alt="picture of a red burning sun">
                     <h3>The Sun</h3>
-                    <button>Learn More</button>
+                    <button onclick="location.href='https://en.wikipedia.org/wiki/Sun'">Learn More</button>
                 </div>
-                <div class="mercury-card">
+                <div class="mercury-card card">
                     <img src="images/mercury.jpg" alt="Picture of mercury">
                     <h3>Mercury</h3>
-                    <button>Learn More</button>
+                    <button  onclick="location.href='https://en.wikipedia.org/wiki/Mercury_(planet)'">Learn More</button>
                 </div>
-                <div class="venus-card">
+                <div class="venus-card card">
                     <img src="images/venus.jpg" alt="Picture of venus">
                     <h3>Venus</h3>
-                    <button>Learn More</button>
+                    <button onclick="location.href='https://en.wikipedia.org/wiki/Venus'">Learn More</button>
                 </div>
-                <div class="earth-card">
+                <div class="earth-card card">
                     <img src="images/earth.jpg" alt="Picture of earth">
                     <h3>Earth</h3>
-                    <button>Learn More</button>
+                    <button onclick="location.href='https://en.wikipedia.org/wiki/Earth'">Learn More</button>
                 </div>
-                <div class="moon-card">
+                <div class="moon-card card">
                     <img src="images/moon.jpg" alt="Picture of moon">
                     <h3>The Moon</h3>
-                    <button>Learn More</button>
+                    <button onclick="location.href='https://en.wikipedia.org/wiki/Moon'">Learn More</button>
                 </div>
-                <div class="mars-card">
+                <div class="mars-card card">
                     <img src="images/mars.jpg" alt="Picture of mars">
                     <h3>Mars</h3>
-                    <button>Learn More</button>
+                    <button onclick="location.href='https://en.wikipedia.org/wiki/Mars'">Learn More</button>
                 </div>
             </div>
         </section>
