media quaries added

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <div class="header-container">
             <div class="logo">
                 <a href="#">THE <div>SYSTEM</div></a>
+                <div class="logo-strip"></div>
             </div>
             <nav class="navigation">
                 <ul>
