--- a/index.html
+++ b/index.html
@@ -14,12 +14,13 @@
 
 </head>
 <body>
+   <a href="#main-content" class="skip-link">Skip to content</a>
    <div class="container">
     <header>
         <div class="header-container">
             <div class="logo">
-                <a href="#">THE <div>SYSTEM</div></a>
-                <div class="logo-strip"></div>
+                <a href="#">THE <span class="logo-stripe">SYSTEM</span></a>
+                <!-- <div class="logo-strip"></div> -->
             </div>
             <nav class="navigation">
                 <ul>
@@ -31,8 +32,8 @@
             </nav>
         </div>      
     </header>
-    <main>
-        <section class="section-1">
+    <main id="main-content">
+        <section class="section-1" role="region" aria-label="Website's Main Heading">
             <div class="heading-banner">
                 <div class="image-container">
                     <img src="images/milky-way.jpg" alt="picture of milky way">
