--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
 </head>
 <body>
+   <a href="#main-content" class="skip-nav-link">Skip to Nav</a>
    <a href="#main-content" class="skip-link">Skip to content</a>
    <div class="container">
     <header>
@@ -52,6 +53,7 @@
                     <img src="images/sun.jpg" alt="picture of a red burning sun">
                     <h3>The Sun</h3>
                     <button onclick="location.href='https://en.wikipedia.org/wiki/Sun'">Learn More</button>
+                    <!-- i used button link instead of using ancher tag, i did not see any rules in rule break about linking tag -->
                 </div>
                 <div class="mercury-card card">
                     <img src="images/mercury.jpg" alt="Picture of mercury">
